--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <li>R - revolutional</li>
 </ul>
 </section>
-<a href="something.html">Do you want to see something?</a><br><br>
+<a href="Something.html">Do you want to see something?</a><br><br>
 
 
 <img src="prosto bober.jpg" width="400" height="122">
